todas las paginas creadas sin html, mitad de servicios

--- a/my-app/src/index.html
+++ b/my-app/src/index.html
@@ -2,38 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyApp</title>
+  <title>Unimarket</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/all.min.css">
   <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <style>
-    .top-bar {
-      background-color: #fff718;
-      height: 40px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 9999;
-    }
-
-    .bottom-bar {
-      background-color: #fff718;;
-      height: 40px;
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      z-index: 9999;
-    }
-  </style>
 </head>
 <body>
-  <div class="top-bar"></div>
   <app-root></app-root>
-  <div class="bottom-bar"></div>
 </body>
 </html>
 
